force-app/main/default/objects/Checklist_de_Documentos__c/Checklist_de_Documentos__c.object-meta.xml
<CustomObject>
    <label>Checklist de Documentos</label>
    <nameField>
        <label>Nome de Checklist de Documentos</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>