force-app/main/default/objects/Checklist_de_Documentos__c/fields/Documenta_o__c.field-meta.xml
<CustomField>
    <fullName>Documenta_o__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Documentação</label>
    <referenceTo>Documentacao__c</referenceTo>
    <relationshipLabel>Checklist</relationshipLabel>
    <relationshipName>Checklist</relationshipName>
    <type>Lookup</type>
</CustomField>