force-app/main/default/objects/Checklist_de_Documentos__c/fields/IsDelivered__c.field-meta.xml
<CustomField>
    <fullName>IsDelivered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsDelivered</label>
    <type>Checkbox</type>
</CustomField>