force-app/main/default/objects/Checklist_de_Documentos__c/fields/Nome_do_Documento__c.field-meta.xml
<CustomField>
    <fullName>Nome_do_Documento__c</fullName>
    <label>Nome do Documento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>